// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backlinks frontmatter tags multiple 1`] = `
VFile {
  "contents": "<h1 id=\\"test\\">Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"one\\">One (vault1)</a></li>
<li><a href=\\"two\\">Two (vault1)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`backlinks frontmatter tags single 1`] = `
VFile {
  "contents": "<h1 id=\\"test\\">Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"one\\">One (vault1)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`backlinks hashtag 1`] = `
VFile {
  "contents": "<h1 id=\\"test\\">Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"one\\">One (vault1)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
